--- a/Client/Angular/package.json
+++ b/Client/Angular/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "elish-master",
+  "name": "myapp",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,51 +11,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/http": "^7.2.15",
-    "rxjs-compat": "^6.5.2",
-    "@angular/animations": "~9.0.0-rc.6",
-    "@angular/cdk": "~8.2.3",
-    "@angular/common": "~9.0.0-rc.6",
-    "@angular/compiler": "~9.0.0-rc.6",
-    "@angular/core": "~9.0.0-rc.6",
-    "@angular/fire": "^5.2.3",
-    "@angular/forms": "~9.0.0-rc.6",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~9.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "~9.0.0-rc.6",
-    "@angular/router": "~9.0.0-rc.6",
-    "firebase": "^7.6.0",
-    "hammerjs": "^2.0.8",
-    "rxjs": "~6.5.3",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "core-js": "^2.5.4",
-    "@capacitor/cli": "^1.0.0-beta.3",
-    "@capacitor/core": "^1.0.0-beta.3",
-    "cordova-plugin-browsertab": "^0.2.0",
-    "cordova-plugin-buildinfo": "^2.0.1",
-    "cordova-plugin-inappbrowser": "^3.0.0",
-    "cordova-universal-links-plugin": "^1.2.1"
+    "@angular/animations": "~11.0.1",
+    "@angular/cdk": "^11.0.1",
+    "@angular/common": "~11.0.1",
+    "@angular/compiler": "~11.0.1",
+    "@angular/core": "~11.0.1",
+    "@angular/fire": "^6.1.2",
+    "@angular/forms": "~11.0.1",
+    "@angular/material": "^11.0.1",
+    "@angular/platform-browser": "~11.0.1",
+    "@angular/platform-browser-dynamic": "~11.0.1",
+    "@angular/router": "~11.0.1",
+    "firebase": "^7.0.0 || ^8.0.0",
+    "rxjs": "~6.6.0",
+    "rxjs-compat": "6.5.2",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.0-rc.6",
-    "@angular/cli": "~9.0.0-rc.6",
-    "@angular/compiler-cli": "~9.0.0-rc.6",
-    "@angular/language-service": "~9.0.0-rc.6",
+    "@angular-devkit/architect": ">= 0.900 < 0.1200",
+    "@angular-devkit/build-angular": "~0.1100.2",
+    "@angular/cli": "~11.0.2",
+    "@angular/compiler-cli": "~11.0.1",
+    "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.6.4"
+    "codelyzer": "^6.0.0",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.1.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "open": "^7.0.3",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.2"
   }
 }
